<resources>
    <string name="app_name">Aarhus University Freitag Bar Gezucken</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_map">Map</string>
    <string name="title_closest_bar">Closest bar</string>
    <string name="btnLoginEmail">Sign in with email</string>
    <string name="txtName">Bar Name</string>
    <string name="txtRating">Bar Rating</string>
    <string name="facebook_app_id" translatable="false">418907156604002</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb418907156604002</string>
    <string name="btnLoginFacebook">Sign in with Facebook</string>
    <string name="txtOpen">Open </string>
    <string name="txtClose">Close </string>
    <string name="txtFacebook">Facebook </string>
    <string name="txtInstagram">Instagram </string>
    <string name="mapLocationDisplay">My location</string>
    <string name="txtCompass">Compass</string>
    <string name="txtDescription">Description: </string>
    <string name="txtFaculty">Faculty</string>
    <string name="txtDistance">Distance</string>
    <string name="btnNavigate">Navigate</string>
    <string name="logout">Logout</string>

    <string name="txtMyRating">My rating: %1$s</string>
    <string name="urlErrorToast">That sadly doesn\'t exists.</string>
    <string name="MailSent">Mail sent</string>

    <string name="txtOpenHours" translatable="false">%1$s - %2$s</string>
    <string name="txtDescriptionMainText" translatable="false">"%1$s"</string>

    <!-- LOGIN_ACTIVITY STRINGS -->
    <string name="txtWelcome">Welcome!</string>
    <string name="txtTitle">Welcome to AU Bar Finder</string>
    <string name="txtUnderTitle">Please sign in below to continue</string>
    <string name="facebookAuthenticationFail">Authentication failed</string>
    <string name="mailMissingInfo">Please enter both email and password.</string>
    <string name="loginError">Error loggin in, please try again.</string>
    <string name="Error">Error, please try again.</string>
    <string name="shortPassword">Password must be more than 6 characters.</string>
    <string name="userCreateSuccess">User created successfully!</string>
    <string name="userCreateFailure">Something went wrong, please try again.</string>
    <string name="hintUsername">Email</string>
    <string name="hintPassword">Password</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="signIn">Sign in</string>
    <string name="newUserSignUp">New user? Sign up!</string>


    <!-- ALL THE NOTIFICATION STRINGS -->
    <string name="notificationChannelName" translatable="false">AUB_NotificationChannelName</string>
    <string name="notificationChannelDescription" translatable="false">AUB_NotificationChannelDescription</string>
    <string name="notificationChannelID" translatable="false">AUB_NotificationChannelID</string>
    <string name="notificationTitle">It\'s finally Friday!</string>
    <string name="notificationText">Check out some of the open bars</string>
    <string name="txtRestore">Please enter your email</string>
    <string name="txtSubmit">Send restore mail</string>
    <string name="filterMyRated">My rated bars only</string>
    <string name="filterIsOpen">Is open</string>
    <string name="filterAlphabetical">Alphabetically</string>
    <string name="filterRated">Highest rated</string>
    <string name="filterDistance">Distance</string>

</resources>