<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <item
            android:id="@+id/isopenchbx"
            android:checkable="true"
            android:title="@string/filterIsOpen" />
        <item
            android:id="@+id/sortmyrateditems"
            android:checkable="true"
            android:title="@string/filterMyRated" />
        <item
            android:id="@+id/sortalphabetical"
            android:title="@string/filterAlphabetical" />
        <item
            android:id="@+id/sortratingitem"
            android:title="@string/filterRated" />

        <item
            android:id="@+id/sortdistanceitem"
            android:title="@string/filterDistance" />
        <item
            android:id="@+id/logout"
            android:title="@string/logout" />

</menu>